--- a/Payroll_/PPeriod.xaml
+++ b/Payroll_/PPeriod.xaml
@@ -8,16 +8,17 @@
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro" 
         GlowBrush="{DynamicResource AccentColorBrush}" Height="430.338" Width="836.462" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" ResizeMode="NoResize">
     <Grid Margin="0,0,2,3">
+        
         <DataGrid  x:Name="dtPperiod" 
     		
             ItemsSource="{Binding _pPeriodList}"
     		AutoGenerateColumns="False" CanUserAddRows="False"
     		IsReadOnly="True"
     		CanUserReorderColumns="False"
-    		AlternatingRowBackground="LightGray"     
+    		
     		Style="{DynamicResource AzureDataGrid}" 
     		Margin="10,35,11,103" 
-    		Cursor="" Background="White" GridLinesVisibility="Horizontal" BorderThickness="1,0,0,0" BorderBrush="#CC7F7F81" SelectionMode="Single" SelectionChanged="dtPperiod_SelectionChanged">
+    		Cursor="" GridLinesVisibility="Horizontal" BorderThickness="1,0,0,0" BorderBrush="#CC7F7F81" SelectionMode="Single" SelectionChanged="dtPperiod_SelectionChanged">
             <DataGrid.Columns>
                 <DataGridCheckBoxColumn 
     				ElementStyle="{DynamicResource MetroDataGridCheckBox}"
@@ -61,7 +62,16 @@
             </DataGrid.Columns>
 
         </DataGrid>
-        <Button x:Name="btProceed"  Content="{StaticResource appbar_billing}"  HorizontalAlignment="Left" Margin="642,320,0,6" Width="175" Click="btProceed_Click"/>
+        <Button x:Name="btProceed" Style="{DynamicResource MetroCircleButtonStyle}" HorizontalAlignment="Right" Width="68" Height="57" VerticalAlignment="Bottom" Margin="0,0,11,27" Click="btProceed_Click">
+            <Button.Content>
+                <Rectangle Fill="Black"  Width="20" Height="20" >
+                    <Rectangle.OpacityMask>
+                        <VisualBrush Visual="{StaticResource appbar_add}" Stretch="Fill"></VisualBrush>
+                    </Rectangle.OpacityMask>
+                </Rectangle>
+            </Button.Content>
+            <!--Content="{StaticResource appbar_billing}"   HorizontalAlignment="Left" Margin="741,320,0,6" Width="76" Click="btProceed_Click"-->
+        </Button>
         <CheckBox x:Name="ckTOPFive" Content="TOP 5" HorizontalAlignment="Left" Height="39" Margin="10,320,0,0" VerticalAlignment="Top" Width="137" IsChecked="True" Unchecked="ckTOPFive_Unchecked" Checked="ckTOPFive_Checked"/>
 
     </Grid>
