--- a/Payroll_/MainWindow.xaml
+++ b/Payroll_/MainWindow.xaml
@@ -1,9 +1,36 @@
-﻿<Window x:Class="Payroll_.MainWindow"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-       WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" ResizeMode="NoResize"
-        Title="MainWindow" Height="350" Width="525">
+﻿<Controls:MetroWindow x:Class="Payroll_.MainWindow"
+                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"    
+                       WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" ResizeMode="NoResize"
+                        Title="MainWindow" Height="350" Width="525">
+
     <Grid x:Name="Main">
+        <Controls:WindowButtonCommands Panel.ZIndex="1"
+                                 HorizontalAlignment="Right"
+                                 VerticalAlignment="Top"
+                                 Height="{Binding TitlebarHeight, Mode=OneWay, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Controls:MetroWindow}}}" />
+
+        <!--<Controls:MetroWindow.RightWindowCommands>
+            <Controls:WindowCommands>
+                <Button Content="settings" />
+                <Button>
+                    <StackPanel Orientation="Horizontal">
+                        <Rectangle Width="20"
+                   Height="20"
+                   Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
+                            <Rectangle.OpacityMask>
+                                <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_cupcake}" />
+                            </Rectangle.OpacityMask>
+                        </Rectangle>
+                        <TextBlock Margin="4 0 0 0"
+                   VerticalAlignment="Center"
+                   Text="deploy cupcakes" />
+                    </StackPanel>
+                </Button>
+            </Controls:WindowCommands>
+        </Controls:MetroWindow.RightWindowCommands>-->
+
         <DataGrid x:Name="dt" ItemsSource="{Binding Source}" Margin="0,74,0,0">
             <DataGrid.Resources>
                 <Style TargetType="{x:Type DataGridRow}">
@@ -17,4 +44,4 @@
             </DataGrid.Resources>
         </DataGrid>
     </Grid>
-</Window>
+</Controls:MetroWindow>
